--- a/src/user_accounts/templates/user_accounts/dashboard.html
+++ b/src/user_accounts/templates/user_accounts/dashboard.html
@@ -12,13 +12,22 @@
         <div class="card card-body">
             <a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
             <table class="table table-sm">
-                <tbody><tr>
+                <tr>
                     <th></th>
                     <th>Customer</th>
-                    <th>Orders</th>
+                    <th>Phone</th>
+                    <th>Email</th>
                 </tr>
+
+                {% for customer in customers %}
+                    <tr>
+                        <td><a class = "btn btn-outline-info btn-sm" href="{% url 'customer' customer.id %}">View</a></td>
+                        <td> {{ customer.name }}</td>
+                        <td> {{ customer.phone }}</td>
+                        <td> {{ customer.email }}</td>
+                    </tr>
+                {% endfor %}
     
-            </tbody>
         </table>
         </div>
     </div>
@@ -27,9 +36,8 @@
         <h5>LAST 5 ORDERS</h5>
         <hr>
         <div class="card card-body">
-            <a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_order' %}">Create Order</a>
             <table class="table table-sm">
-                <tbody>
                     <tr>
                         <th>Product</th>
                         <th>Date Orderd</th>
@@ -37,7 +45,17 @@
                         <th>Update</th>
                         <th>Remove</th>
                     </tr>
-                </tbody>
+
+                    {% for order in orders %}
+                        <tr>
+                            <td>{{ order.product }}</td>
+                            <td>{{ order.date_created }}</td>
+                            <td>{{ order.status }}</td>
+                            <td> <a class = "btn btn-primary btn-sm" href="#">Update</a></td>
+                            <td><a class = "btn btn-danger btn-sm" href="#">Remove</a></td>
+                        </tr>
+                    {% endfor %}
+
             </table>
         </div>
     </div>
