--- a/src/user_accounts/templates/user_accounts/customers.html
+++ b/src/user_accounts/templates/user_accounts/customers.html
@@ -9,7 +9,7 @@
 		<div class="card card-body">
 			<h5>Customer:</h5>
 			<hr>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'update_customer' customer.id %}">Update Customer</a>
 			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
 
 		</div>
@@ -68,8 +68,8 @@
 					<td>{{order.product.category}}</td>
 					<td>{{order.date_created}}</td>
 					<td>{{order.status}}</td>
-					<td><a class="btn btn-sm btn-info" href="">Update</a></td>
-					<td><a class="btn btn-sm btn-danger" href="">Remove</a></td>
+					<td><a class="btn btn-sm btn-primary" href="{% url 'update_order' order.id %}"><i class="bi bi-pencil-square"></a></td>
+					<td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id%}"><i class="bi bi-trash"></i></a></td>
 				</tr>
 				{% endfor %}
 
