--- a/src/user_accounts/templates/user_accounts/order_form.html
+++ b/src/user_accounts/templates/user_accounts/order_form.html
@@ -1,11 +1,20 @@
 {% extends 'user_accounts/main.html'%}
 {% load static %}
 {% block content %}
-
-    <form action="" method="post">
-        {% csrf_token %}
-        {{form}}
-        <input type="submit" value="Submit" name="submit">
-    </form>
+<div class="card">
+    <div class="card-body">
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ formset.management_form }}
+            {% for form in formset %}
+                {{form}}
+                <hr>
+            {% endfor %}
+            <input type="submit" value="Submit" name="submit">
+        </form>
+    </div>
+    
+</div>
+    
 
 {% endblock%}
